update team email

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         body {
             background: #484848;
         }
-
         .wraper {
           display: block;
           margin: 80px auto;
           text-align: center;
           color: #fff;
+        }
+        p {
+            font-size: 20px;
         }
     </style>
 </head>
@@ -21,6 +23,7 @@
 <body>
     <div class="wraper">
         <h1>Panda Developer Team</h1>
+        <p>Site will come soon, but you can contact at team.pandadev@gmail.com</p>
         <img src="./asset/agent-panda-shirt-600x433.jpg" alt="Panda Developer">
     </div>
 </body>
