--- a/index.html
+++ b/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
-<html>
-
+<!--[if lt IE 7]><html class="no-js ie6 oldie" lang="en"><![endif]-->
+<!--[if IE 7]><html class="no-js ie7 oldie" lang="en"><![endif]-->
+<!--[if IE 8]><html class="no-js ie8 oldie" lang="en"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Panda Developer</title>
-    <style media="screen">
-        body {
-            background: #484848;
-        }
-        .wraper {
-          display: block;
-          margin: 80px auto;
-          text-align: center;
-          color: #fff;
-        }
-        p {
-            font-size: 20px;
-        }
-    </style>
+    <link rel="canonical" href="https://pandadevteam.github.io/" />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' />
+    <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1' /><![endif]-->
+    <meta name="description" content="Panda Developer Team, Thiết kế và lập trình website" />
+		<meta name="robots" content="index,follow" />
+ 		<meta name="revisit-after" content="1 day" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Panda Developer Team" />
+    <meta property="og:image" content="https://pandadevteam.github.io/asset/agent-panda-shirt-600x433.jpg" />
+    <meta property="og:image" content="https://pandadevteam.github.io/asset/agent-panda-shirt-600x433.jpg" />
+    <meta property="og:url" content="https://pandadevteam.github.io" />
+    <meta property="og:description" content="Panda Developer Team, Thiết kế và lập trình website" />
+    <meta property="og:site_name" content="Panda Developer Team" />
+    <style>.loader_overlay {position: fixed;z-index: 9999;width: 100%;height: 100%;left: 0;top: 0;background-color: #fff;-webkit-transition: all .1s ease;-o-transition: all .1s ease;transition: all .1s ease;opacity: 1;visibility: visible;}.loader_overlay.loaded {opacity: 0;visibility: hidden;z-index: -2;}</style>
 </head>
 
 <body>
-    <div class="wraper">
-        <h1>Panda Developer Team</h1>
-        <p>Site will come soon, but you can contact at team.pandadev@gmail.com</p>
-        <img src="./asset/agent-panda-shirt-600x433.jpg" alt="Panda Developer">
-    </div>
-</body>
+<div class="loader_overlay"><div id="loader"></div><div class="loader-section section-left"></div><div class="loader-section section-right"></div></div>
+<nav class="nav" style="">
+    <div class="container text-right">
+        <a class="pull-left" href="#">
+          <h1 class="navbar-brand">Panda Developer</h1>
+        </a>
+        <div class="main-navbar dis-inline clearfix hidden-sm" id="navbar-ul">
+            <ul class="main-navbar p-0">
+                <li class="nav-item dis-inline">
+                    <a class="nav-link" href="#about">About Us</a>
+                </li>
+                <li class="nav-item dis-inline">
+                    <a class="nav-link" href="#skill">Our Skill</a>
+                </li>
+                <li class="nav-item dis-inline">
+                    <a class="nav-link" href="#portfolio">Our work</a>
+                </li>
+                <li class="nav-item dis-inline">
+                    <a class="nav-link" href="#contact">Contact Us</a>
+                </li>
+            </ul>
 
+        </div>
+    </div>
+</nav>
+<header>
+  <div class="container">
+    <div class="header-content text-center relative">
+      <h2></h2>
+    </div>
+  </div>
+</header>
+
+  <script src="http://hstatic.net/0/0/global/design/js/jquery.min.1.11.0.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Pacifico|Fjalla+One" rel="stylesheet">
+  <script src="./asset/index.js"></script>
+  <link rel="stylesheet" href="./asset/index.css">
+</body>
 </html>
